--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1, shrink-to-fit=no"
 		/>
-		<meta name="theme-color" content="#000000" />
+		<meta name="theme-color" content="#69d5f0" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<title>Weigthlift Tracker</title>
 	</head>
